@@ -727,6 +727,9 @@ dev devices:
 	          $$sudo mknod -m 666 $$f c 150 $$n; \
 	       fi; \
 	    done ; \
+	    if test \! -c /dev/rtheap; then \
+	       $$sudo mknod -m 666 /dev/rtheap c 10 254; \
+	    fi; \
 	fi
 
 uninstall-local:
